[gd_scene load_steps=6 format=3 uid="uid://d1pg3us6cla78"]

[ext_resource type="Script" uid="uid://xtkuky7r68lw" path="res://fish/fish_data/fish_spin.gd" id="1_ct8vp"]
[ext_resource type="Script" uid="uid://hcexuxi6nr2i" path="res://ui/reward_ui.gd" id="1_gyc3q"]
[ext_resource type="PackedScene" uid="uid://o6v0k7lv0im3" path="res://fish/fish_data/seabass.glb" id="2_gyc3q"]

[sub_resource type="LabelSettings" id="LabelSettings_h7iqs"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_4fuuu"]
font_size = 64

[node name="RewardUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyc3q")

[node name="RewardViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="RewardViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="RewardViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="RewardViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32571578, 1.3259151)
fov = 35.0

[node name="KeyLight" type="OmniLight3D" parent="RewardViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.17722082, 1.0307121, -2.6048584)
light_energy = 2.0

[node name="FillLight" type="OmniLight3D" parent="RewardViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9443097, 0.19792604, -4.769332)
light_color = Color(0.77041346, 0.6881779, 0.491046, 1)
light_energy = 0.6

[node name="RimLight" type="OmniLight3D" parent="RewardViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0509975, -0.19591105, -6.0625677)
light_color = Color(0.28628203, 0.69706255, 0.9366047, 1)
light_energy = 0.2

[node name="Node3D" type="Node3D" parent="RewardViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
script = ExtResource("1_ct8vp")

[node name="seabass" parent="RewardViewportContainer/SubViewport/Node3D/Node3D" instance=ExtResource("2_gyc3q")]
transform = Transform3D(1.1924881e-08, 0, -1, 0, 1, 0, 1, 0, 1.1924881e-08, 0, 0, 0)

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_right = 51.0
offset_bottom = 23.0
grow_horizontal = 2
text = "NICE CATCH!!"
label_settings = SubResource("LabelSettings_h7iqs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -405.5
offset_top = -175.0
offset_right = 405.5
grow_horizontal = 2
grow_vertical = 0
text = "FISH"
label_settings = SubResource("LabelSettings_4fuuu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_top = -145.0
offset_right = -50.0
offset_bottom = -74.0
grow_horizontal = 0
grow_vertical = 0
text = "NEXT"

[connection signal="pressed" from="NextButton" to="." method="_on_next"]
